[package]
name = "vk-sys"
version = "0.1.0"
authors = ["Dennis Hamester <dennis.hamester@startmail.com>"]
license = "ISC"

[features]
default = [ "vk_1_0_3" ]

vk_1_0_4 = [ "vk_1_0_3", "core_1_0_4", "ext_debug_report_2" ]

vk_1_0_3 = [ "core_1_0_3", "khr_surface_25", "khr_swapchain_67", "khr_display_21",
             "khr_display_swapchain_9", "khr_xlib_surface_6", "khr_xcb_surface_6",
             "khr_wayland_surface_5", "khr_mir_surface_4", "khr_android_surface_6",
             "khr_win32_surface_5", "ext_debug_report_1" ]

core = [ "core_1_0_4" ]
core_1_0_4 = [ "core_1_0_3" ]
core_1_0_3 = [ ]

khr_surface = [ "khr_surface_25" ]
khr_surface_25 = [ "core_1_0_3" ]

khr_swapchain = [ "khr_swapchain_67" ]
khr_swapchain_67 = [ "core_1_0_3", "khr_surface_25" ]

khr_display = [ "khr_display_21" ]
khr_display_21 = [ "core_1_0_3", "khr_surface_25" ]

khr_display_swapchain = [ "khr_display_swapchain_9" ]
khr_display_swapchain_9 = [ "core_1_0_3", "khr_swapchain_67", "khr_display_21" ]

khr_xlib_surface = [ "khr_xlib_surface_6" ]
khr_xlib_surface_6 = [ "core_1_0_3", "khr_surface_25" ]

khr_xcb_surface = [ "khr_xcb_surface_6" ]
khr_xcb_surface_6 = [ "core_1_0_3", "khr_surface_25" ]

khr_wayland_surface = [ "khr_wayland_surface_5" ]
khr_wayland_surface_5 = [ "core_1_0_3", "khr_surface_25" ]

khr_mir_surface = [ "khr_mir_surface_4" ]
khr_mir_surface_4 = [ "core_1_0_3", "khr_surface_25" ]

khr_android_surface = [ "khr_android_surface_6" ]
khr_android_surface_6 = [ "core_1_0_3", "khr_surface_25" ]

khr_win32_surface = [ "khr_win32_surface_5" ]
khr_win32_surface_5 = [ "core_1_0_3", "khr_surface_25" ]

ext_debug_report = [ "ext_debug_report_2" ]
ext_debug_report_2 = [ "core_1_0_4", "ext_debug_report_1" ]
ext_debug_report_1 = [ "core_1_0_3" ]

[dependencies]
libc = "0.2.21"
bitflags = "0.8.0"
