[package]
name = "vk-sys"
version = "0.8.1"
authors = [ "Dennis Hamester <dennis.hamester@startmail.com>" ]
description = "Vulkan bindings and symbol loader"
homepage = "https://gitlab.com/dennis-hamester/vk-sys"
repository = "https://gitlab.com/dennis-hamester/vk-sys"
readme = "README.md"
keywords = [ "vulkan", "graphics" ]
categories = [ "external-ffi-bindings", "rendering", "rendering::graphics-api" ]
license = "ISC"

[badges]
gitlab = { repository = "https://gitlab.com/dennis-hamester/vk-sys" }

[features]
default = [ "vk_1_0_38" ]

vk_1_0_39 = [ "vk_1_0_38", "core_1_0_39", "khr_get_physical_device_properties2_1",
              "khr_shader_draw_parameters_1" ]

vk_1_0_38 = [ "vk_1_0_37", "core_1_0_38" ]

vk_1_0_37 = [ "vk_1_0_36", "core_1_0_37", "ext_debug_report_4" ]

vk_1_0_36 = [ "vk_1_0_35", "core_1_0_36" ]

vk_1_0_35 = [ "vk_1_0_34", "core_1_0_35", "nvx_device_generated_commands_1" ]

vk_1_0_34 = [ "vk_1_0_33", "core_1_0_34" ]

vk_1_0_33 = [ "vk_1_0_32", "core_1_0_33" ]

vk_1_0_32 = [ "vk_1_0_31", "core_1_0_32", "amd_negative_viewport_height_1", "amd_shader_ballot_1" ]

vk_1_0_31 = [ "vk_1_0_30", "core_1_0_31" ]

vk_1_0_30 = [ "vk_1_0_29", "core_1_0_30" ]

vk_1_0_29 = [ "vk_1_0_28", "core_1_0_29" ]

vk_1_0_28 = [ "vk_1_0_27", "core_1_0_28", "amd_gpu_shader_half_float_1" ]

vk_1_0_27 = [ "vk_1_0_26", "core_1_0_27", "ext_validation_flags_1" ]

vk_1_0_26 = [ "vk_1_0_25", "core_1_0_26" ]

vk_1_0_25 = [ "vk_1_0_24", "core_1_0_25", "amd_draw_indirect_count_1",
              "nv_external_memory_capabilities_1", "nv_external_memory_1",
              "nv_external_memory_win32_1", "nv_win32_keyed_mutex_1" ]

vk_1_0_24 = [ "vk_1_0_23", "core_1_0_24", "img_format_pvrtc_1" ]

vk_1_0_23 = [ "vk_1_0_22", "core_1_0_23" ]

vk_1_0_22 = [ "vk_1_0_21", "core_1_0_22" ]

vk_1_0_21 = [ "vk_1_0_20", "core_1_0_21" ]

vk_1_0_20 = [ "vk_1_0_19", "core_1_0_20", "nv_dedicated_allocation_1" ]

vk_1_0_19 = [ "vk_1_0_18", "core_1_0_19" ]

vk_1_0_18 = [ "vk_1_0_17", "core_1_0_18" ]

vk_1_0_17 = [ "vk_1_0_16", "core_1_0_17", "ext_debug_report_3" ]

vk_1_0_16 = [ "vk_1_0_15", "core_1_0_16", "amd_shader_trinary_minmax_1",
              "amd_shader_explicit_vertex_parameter_1", "amd_gcn_shader_1" ]

vk_1_0_15 = [ "vk_1_0_14", "core_1_0_15" ]

vk_1_0_14 = [ "vk_1_0_13", "core_1_0_14" ]

vk_1_0_13 = [ "vk_1_0_12", "core_1_0_13", "ext_debug_marker_3" ]

vk_1_0_12 = [ "vk_1_0_11", "core_1_0_12", "amd_rasterization_order_1" ]

vk_1_0_11 = [ "vk_1_0_10", "core_1_0_11", "khr_swapchain_68" ]

vk_1_0_10 = [ "vk_1_0_9", "core_1_0_10" ]

vk_1_0_9 = [ "vk_1_0_8", "core_1_0_9" ]

vk_1_0_8 = [ "vk_1_0_7", "core_1_0_8" ]

vk_1_0_7 = [ "vk_1_0_6", "core_1_0_7" ]

vk_1_0_6 = [ "vk_1_0_5", "core_1_0_6", "img_filter_cubic_1" ]

vk_1_0_5 = [ "vk_1_0_4", "core_1_0_5", "nv_glsl_shader_1" ]

vk_1_0_4 = [ "vk_1_0_3", "core_1_0_4", "khr_sampler_mirror_clamp_to_edge_1", "ext_debug_report_2" ]

vk_1_0_3 = [ "core_1_0_3", "khr_surface_25", "khr_swapchain_67", "khr_display_21",
             "khr_display_swapchain_9", "khr_xlib_surface_6", "khr_xcb_surface_6",
             "khr_wayland_surface_5", "khr_mir_surface_4", "khr_android_surface_6",
             "khr_win32_surface_5", "ext_debug_report_1" ]

core = [ "core_1_0_39" ]
core_1_0_39 = [ "core_1_0_38" ]
core_1_0_38 = [ "core_1_0_37" ]
core_1_0_37 = [ "core_1_0_36" ]
core_1_0_36 = [ "core_1_0_35" ]
core_1_0_35 = [ "core_1_0_34" ]
core_1_0_34 = [ "core_1_0_33" ]
core_1_0_33 = [ "core_1_0_32" ]
core_1_0_32 = [ "core_1_0_31" ]
core_1_0_31 = [ "core_1_0_30" ]
core_1_0_30 = [ "core_1_0_29" ]
core_1_0_29 = [ "core_1_0_28" ]
core_1_0_28 = [ "core_1_0_27" ]
core_1_0_27 = [ "core_1_0_26" ]
core_1_0_26 = [ "core_1_0_25" ]
core_1_0_25 = [ "core_1_0_24" ]
core_1_0_24 = [ "core_1_0_23" ]
core_1_0_23 = [ "core_1_0_22" ]
core_1_0_22 = [ "core_1_0_21" ]
core_1_0_21 = [ "core_1_0_20" ]
core_1_0_20 = [ "core_1_0_19" ]
core_1_0_19 = [ "core_1_0_18" ]
core_1_0_18 = [ "core_1_0_17" ]
core_1_0_17 = [ "core_1_0_16" ]
core_1_0_16 = [ "core_1_0_15" ]
core_1_0_15 = [ "core_1_0_14" ]
core_1_0_14 = [ "core_1_0_13" ]
core_1_0_13 = [ "core_1_0_12" ]
core_1_0_12 = [ "core_1_0_11" ]
core_1_0_11 = [ "core_1_0_10" ]
core_1_0_10 = [ "core_1_0_9" ]
core_1_0_9 = [ "core_1_0_8" ]
core_1_0_8 = [ "core_1_0_7" ]
core_1_0_7 = [ "core_1_0_6" ]
core_1_0_6 = [ "core_1_0_5" ]
core_1_0_5 = [ "core_1_0_4" ]
core_1_0_4 = [ "core_1_0_3" ]
core_1_0_3 = [ ]

khr_surface = [ "khr_surface_25" ]
khr_surface_25 = [ "core_1_0_3" ]

khr_swapchain = [ "khr_swapchain_68" ]
khr_swapchain_68 = [ "khr_swapchain_67" ]
khr_swapchain_67 = [ "core_1_0_3", "khr_surface_25" ]

khr_display = [ "khr_display_21" ]
khr_display_21 = [ "core_1_0_3", "khr_surface_25" ]

khr_display_swapchain = [ "khr_display_swapchain_9" ]
khr_display_swapchain_9 = [ "core_1_0_3", "khr_swapchain_67", "khr_display_21" ]

khr_xlib_surface = [ "khr_xlib_surface_6" ]
khr_xlib_surface_6 = [ "core_1_0_3", "khr_surface_25" ]

khr_xcb_surface = [ "khr_xcb_surface_6" ]
khr_xcb_surface_6 = [ "core_1_0_3", "khr_surface_25" ]

khr_wayland_surface = [ "khr_wayland_surface_5" ]
khr_wayland_surface_5 = [ "core_1_0_3", "khr_surface_25" ]

khr_mir_surface = [ "khr_mir_surface_4" ]
khr_mir_surface_4 = [ "core_1_0_3", "khr_surface_25" ]

khr_android_surface = [ "khr_android_surface_6" ]
khr_android_surface_6 = [ "core_1_0_3", "khr_surface_25" ]

khr_win32_surface = [ "khr_win32_surface_5" ]
khr_win32_surface_5 = [ "core_1_0_3", "khr_surface_25" ]

khr_sampler_mirror_clamp_to_edge = [ "khr_sampler_mirror_clamp_to_edge_1" ]
khr_sampler_mirror_clamp_to_edge_1 = [ "core_1_0_3" ]

khr_get_physical_device_properties2 = [ "khr_get_physical_device_properties2_1" ]
khr_get_physical_device_properties2_1 = [ "core_1_0_3" ]

khr_shader_draw_parameters = [ "khr_shader_draw_parameters_1" ]
khr_shader_draw_parameters_1 = [ "core_1_0_3" ]

ext_debug_report = [ "ext_debug_report_4" ]
ext_debug_report_4 = [ "ext_debug_report_3" ]
ext_debug_report_3 = [ "ext_debug_report_2" ]
ext_debug_report_2 = [ "ext_debug_report_1" ]
ext_debug_report_1 = [ "core_1_0_3" ]

nv_glsl_shader = [ "nv_glsl_shader_1" ]
nv_glsl_shader_1 = [ "core_1_0_3" ]

img_filter_cubic = [ "img_filter_cubic_1" ]
img_filter_cubic_1 = [ "core_1_0_3" ]

amd_rasterization_order = [ "amd_rasterization_order_1" ]
amd_rasterization_order_1 = [ "core_1_0_3" ]

amd_shader_trinary_minmax = [ "amd_shader_trinary_minmax_1" ]
amd_shader_trinary_minmax_1 = [ "core_1_0_3" ]

amd_shader_explicit_vertex_parameter = [ "amd_shader_explicit_vertex_parameter_1" ]
amd_shader_explicit_vertex_parameter_1 = [ "core_1_0_3" ]

ext_debug_marker = [ "ext_debug_marker_3" ]
ext_debug_marker_3 = [ "core_1_0_3" ]

amd_gcn_shader = [ "amd_gcn_shader_1" ]
amd_gcn_shader_1 = [ "core_1_0_3" ]

nv_dedicated_allocation = [ "nv_dedicated_allocation_1" ]
nv_dedicated_allocation_1 = [ "core_1_0_3" ]

amd_draw_indirect_count = [ "amd_draw_indirect_count_1" ]
amd_draw_indirect_count_1 = [ "core_1_0_3" ]

amd_negative_viewport_height = [ "amd_negative_viewport_height_1" ]
amd_negative_viewport_height_1 = [ "core_1_0_3" ]

amd_gpu_shader_half_float = [ "amd_gpu_shader_half_float_1"]
amd_gpu_shader_half_float_1 = [ "core_1_0_3" ]

amd_shader_ballot = [ "amd_shader_ballot_1" ]
amd_shader_ballot_1 = [ "core_1_0_3" ]

img_format_pvrtc = [ "img_format_pvrtc_1" ]
img_format_pvrtc_1 = [ "core_1_0_3" ]

nv_external_memory_capabilities = [ "nv_external_memory_capabilities_1" ]
nv_external_memory_capabilities_1 = [ "core_1_0_3" ]

nv_external_memory = [ "nv_external_memory_1" ]
nv_external_memory_1 = [ "core_1_0_3", "nv_external_memory_capabilities_1" ]

nv_external_memory_win32 = [ "nv_external_memory_win32_1" ]
nv_external_memory_win32_1 = [ "core_1_0_3", "nv_external_memory_capabilities_1",
                               "nv_external_memory_1" ]

nv_win32_keyed_mutex = [ "nv_win32_keyed_mutex_1" ]
nv_win32_keyed_mutex_1 = [ "core_1_0_3", "nv_external_memory_capabilities_1",
                           "nv_external_memory_win32" ]

ext_validation_flags = [ "ext_validation_flags_1" ]
ext_validation_flags_1 = [ "core_1_0_3" ]

nvx_device_generated_commands = [ "nvx_device_generated_commands_1" ]
nvx_device_generated_commands_1 = [ "core_1_0_3" ]

[dependencies]
libc = "0.2.21"
bitflags = "0.8.0"
clippy = { version = "*", optional = true }
