[package]
name = "vks"
version = "0.21.0"
authors = [ "Dennis Hamester <dennis.hamester@startmail.com>" ]
description = "Vulkan FFI bindings and symbol loader. Vulkan 1.0.59 and all extensions are supported."
documentation = "https://docs.rs/vks"
homepage = "https://gitlab.com/dennis-hamester/vks"
repository = "https://gitlab.com/dennis-hamester/vks"
readme = "README.md"
keywords = [ "vulkan", "graphics", "ffi", "no_std" ]
categories = [ "external-ffi-bindings", "rendering", "rendering::graphics-api", "no-std" ]
license = "ISC"
build = "build.rs"
exclude = [
    ".gitignore",
    ".gitlab-ci.yml",
]

[badges]
gitlab = { repository = "dennis-hamester/vks" }

[dependencies]
bitflags = "1.0.1"
libc = "0.2.40"

[features]
function_prototypes = [ ]
